Adding inClass1 to the project.

--- a/InClassAssignments/inClass1.html
+++ b/InClassAssignments/inClass1.html
@@ -15,7 +15,7 @@
             headings).
         </p>
         <h2>Another Sub-Heading</h2>
-        <p>Career Aspirations</p>
+        <p>Not completely sure about my career aspirations but like coding and working in HTML.</p>
 
         <!--   href attribute     -->
         <a href="https://www.fordham.edu/">Fordham University</a>
